# OpenMapleClient

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle
app/src/main/cpp/: CMakeLists.txt  gl.c  gl.cpp  gl.h
app/src/main/cpp/src/: Configuration.cpp  Configuration.h  Constants.h  Error.h  Game.cpp  Game.h  MSClient.h  Timer.h
app/src/main/cpp/src/Audio/: Audio.cpp  Audio.h
app/src/main/cpp/src/Character/: ActiveBuffs.cpp  ActiveBuffs.h  Buff.cpp  Buff.h  Char.cpp  Char.h  CharEffect.cpp  CharEffect.h  CharStats.cpp  CharStats.h  EquipStat.cpp  EquipStat.h  ExpTable.cpp  ExpTable.h  Job.cpp  Job.h  MapleStat.cpp  MapleStat.h  MonsterBook.cpp  MonsterBook.h  OtherChar.cpp  OtherChar.h  PassiveBuffs.cpp  PassiveBuffs.h  Player.cpp  Player.h  PlayerStates.cpp  PlayerStates.h  QuestLog.cpp  QuestLog.h  SkillBook.cpp  SkillBook.h  SkillId.h  StatCaps.h  TeleportRock.cpp  TeleportRock.h
app/src/main/cpp/src/Character/Inventory/: Equip.cpp  Equip.h  EquipQuality.cpp  EquipQuality.h  Inventory.cpp  Inventory.h  InventoryType.cpp  InventoryType.h  Item.cpp  Item.h  Pet.cpp  Pet.h  Weapon.cpp  Weapon.h
app/src/main/cpp/src/Character/Look/: Afterimage.cpp  Afterimage.h  Body.cpp  Body.h  BodyDrawInfo.cpp  BodyDrawInfo.h  CharEquips.cpp  CharEquips.h  CharLook.cpp  CharLook.h  Clothing.cpp  Clothing.h  EquipSlot.cpp  EquipSlot.h  Face.cpp  Face.h  Hair.cpp  Hair.h  PetLook.cpp  PetLook.h  Stance.cpp  Stance.h
app/src/main/cpp/src/Data/: BulletData.cpp  BulletData.h  EquipData.cpp  EquipData.h  ItemData.cpp  ItemData.h  JobData.cpp  JobData.h  SkillData.cpp  SkillData.h  WeaponData.cpp  WeaponData.h
app/src/main/cpp/src/Gameplay/: Camera.cpp  Camera.h  Movement.h  Playable.h  Spawn.cpp  Spawn.h  Stage.cpp  Stage.h
app/src/main/cpp/src/Gameplay/Combat/: Attack.h  Bullet.cpp  Bullet.h  Combat.cpp  Combat.h  DamageNumber.cpp  DamageNumber.h  MobCombat.cpp  MobCombat.h  MobSkill.cpp  MobSkill.h  MobSkillHitEffect.cpp  MobSkillHitEffect.h  MobSkillUseEffect.cpp  MobSkillUseEffect.h  MobSpecialAttack.cpp  MobSpecialAttack.h  RegularAttack.cpp  RegularAttack.h  Skill.cpp  Skill.h  SkillAction.cpp  SkillAction.h  SkillAffectedEffect.cpp  SkillAffectedEffect.h  SkillBullet.cpp  SkillBullet.h  SkillHitEffect.cpp  SkillHitEffect.h  SkillSound.cpp  SkillSound.h  SkillUseEffect.cpp  SkillUseEffect.h  SpecialMove.h
app/src/main/cpp/src/Gameplay/MapleMap/: Drop.cpp  Drop.h  ItemDrop.cpp  ItemDrop.h  Layer.h  MapBackgrounds.cpp  MapBackgrounds.h  MapChars.cpp  MapChars.h  MapDrops.cpp  MapDrops.h  MapEffect.cpp  MapEffect.h  MapInfo.cpp  MapInfo.h  MapMobs.cpp  MapMobs.h  MapNpcs.cpp  MapNpcs.h  MapObject.cpp  MapObject.h  MapObjects.cpp  MapObjects.h  MapPortals.cpp  MapPortals.h  MapReactors.cpp  MapReactors.h  MapTilesObjs.cpp  MapTilesObjs.h  MesoDrop.cpp  MesoDrop.h  Mob.cpp  Mob.h  Npc.cpp  Npc.h  Obj.cpp  Obj.h  Portal.cpp  Portal.h  Reactor.cpp  (+3 more)
app/src/main/cpp/src/Gameplay/Physics/: Foothold.cpp  Foothold.h  FootholdTree.cpp  FootholdTree.h  Physics.cpp  Physics.h  PhysicsObject.h
app/src/main/cpp/src/Graphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  DrawArgument.h  EffectLayer.cpp  EffectLayer.h  Geometry.cpp  Geometry.h  GraphicsGL.cpp  GraphicsGL.h  RecurringEffect.cpp  RecurringEffect.h  SpecialText.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
app/src/main/cpp/src/IO/: Cursor.cpp  Cursor.h  KeyAction.h  KeyConfig.h  KeyType.h  Keyboard.cpp  Keyboard.h  Messages.cpp  Messages.h  TapDetector.cpp  TapDetector.h  TouchInfo.cpp  TouchInfo.h  UI.cpp  UI.h  UIDragElement.h  UIElement.cpp  UIElement.h  UIState.h  UIStateCashShop.cpp  UIStateCashShop.h  UIStateGame.cpp  UIStateGame.h  UIStateLogin.cpp  UIStateLogin.h  Window.cpp  Window.h
app/src/main/cpp/src/IO/Components/: AreaButton.cpp  AreaButton.h  Button.cpp  Button.h  Charset.cpp  Charset.h  ChatBalloon.cpp  ChatBalloon.h  ControlUIButton.cpp  ControlUIButton.h  EquipTooltip.cpp  EquipTooltip.h  Gauge.cpp  Gauge.h  Icon.cpp  Icon.h  IconCover.cpp  IconCover.h  ItemTooltip.cpp  ItemTooltip.h  JoyStickButton.cpp  JoyStickButton.h  JumpButton.cpp  JumpButton.h  MapTooltip.cpp  MapTooltip.h  MapleButton.cpp  MapleButton.h  MapleComboBox.cpp  MapleComboBox.h  MapleFrame.cpp  MapleFrame.h  NameTag.cpp  NameTag.h  NpcText.cpp  ScrollingNotice.cpp  ScrollingNotice.h  SkillTooltip.cpp  SkillTooltip.h  SkillUseButton.cpp  (+18 more)
app/src/main/cpp/src/IO/UITypes/: UIBuffList.cpp  UIBuffList.h  UICashShop.cpp  UICashShop.h  UIChannel.cpp  UIChannel.h  UICharInfo.cpp  UICharInfo.h  UIChat.cpp  UIChat.h  UIChatBar.cpp  UIChatBar.h  UIEquipInventory.cpp  UIEquipInventory.h  UIEvent.cpp  UIEvent.h  UIGaugeBoss.cpp  UIGaugeBoss.h  UIItemInventory.cpp  UIItemInventory.h  UIJoypad.cpp  UIJoypad.h  UIKeyConfig.cpp  UIKeyConfig.h  UIMiniMap.cpp  UIMiniMap.h  UIMobileInput.cpp  UIMobileInput.h  UINotice.cpp  UINotice.h  UINotification.cpp  UINotification.h  UINpcTalk.cpp  UINpcTalk.h  UIOptionMenu.cpp  UIOptionMenu.h  UIQuestLog.cpp  UIQuestLog.h  UIQuit.cpp  UIQuit.h  (+16 more)
app/src/main/cpp/src/Net/: Cryptography.cpp  Cryptography.h  Forwarder.h  InPacket.cpp  InPacket.h  Login.h  NetConstants.h  OutPacket.cpp  OutPacket.h  PacketError.h  PacketHandler.h  PacketProcessor.h  PacketSwitch.cpp  PacketSwitch.h  Session.cpp  Session.h  SocketAsio.cpp  SocketAsio.h  SocketWinsock.cpp  SocketWinsock.h
app/src/main/cpp/src/Net/Handlers/: AttackHandlers.cpp  AttackHandlers.h  CashShopHandlers.cpp  CashShopHandlers.h  CommonHandlers.cpp  CommonHandlers.h  InventoryHandlers.cpp  InventoryHandlers.h  LoginHandlers.cpp  LoginHandlers.h  MapObjectHandlers.cpp  MapObjectHandlers.h  MessagingHandlers.cpp  MessagingHandlers.h  NpcInteractionHandlers.cpp  (+9 more)
app/src/main/cpp/src/Template/: BoolPair.h  Cache.h  EnumMap.h  Enumeration.h  Interpolated.h  OptionalCreator.h  Point.h  Range.h  Rectangle.h  Singleton.h  Template.h  TimedQueue.h  TypeMap.h
app/src/main/cpp/src/Util/: GameInfo.cpp  GameInfo.h  HardwareInfo.h  NxFiles.cpp  NxFiles.h  QuadTree.h  Randomizer.h  ScreenResolution.h  StringHandling.cpp  StringHandling.h  TimedBool.h
(+59 files in other folders)
